created meals component

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
+
 html {
   font-size: 62.5%;
   box-sizing: border-box;
@@ -12,9 +14,10 @@ body,
 body,
 input,
 select,
+button,
 textarea {
+  font-family: Montserrat, Helvetica, Arial, sans-serif;
   font-size: 1.6rem;
-  font-family: Arial, Helvetica, sans-serif;
 }
 
 .grid-container {
@@ -40,11 +43,13 @@ header {
   align-items: center;
   padding: 0.5rem;
   font-weight: bold;
+  font-size: x-large;
 }
 
 header a {
   color: black;
   text-decoration: none;
+  margin-left: 1rem;
 }
 
 main {
@@ -55,7 +60,47 @@ footer {
   grid-area: footer;
   background-color: #ffda00;
   color: black;
+  font-weight: bold;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.content {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.main {
+  flex: 3 60rem;
+}
+
+.sidebar {
+  flex: 1 20rem;
+}
+
+/*meals*/
+
+.meals {
+  justify-content: center;
+  align-items: center;
+  list-style-type: none;
+}
+
+.meal {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.meal p {
+  font-weight: bold;
+}
+.button:hover {
+  border: 0.1rem #808080 solid;
+}
+.button {
+  padding: 0.5rem;
+  border: 0.1rem #c0c0c0 solid;
+  margin-left: 1rem;
+  background-color: #ffda00;
 }
