--- a/src/index.css
+++ b/src/index.css
@@ -104,3 +104,54 @@ footer {
   margin-left: 1rem;
   background-color: #ffda00;
 }
+
+/* Index.css */
+
+.cart {
+  padding: 1rem;
+  margin: 1rem;
+  display: flex;
+}
+
+.cart-header {
+  border-bottom: 0.1rem #c0c0c0 solid;
+}
+
+.cart-items {
+  padding: 0;
+  width: 100%;
+  list-style-type: none;
+}
+
+.cart-items li {
+  display: flex;
+}
+
+.cart-items li div {
+  padding: 0.5rem;
+}
+
+.button-remove {
+  background-color: #ff9900;
+}
+
+/* Checkout form */
+.form {
+  width: 100%;
+}
+
+.form-container {
+  width: 100%;
+  padding: 0;
+  list-style-type: none;
+}
+.form-container li {
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+}
+
+.input {
+  padding: 1rem;
+  border: 0.1rem #c0c0c0 solid;
+}
