--- a/src/index.css
+++ b/src/index.css
@@ -40,6 +40,7 @@ header {
   background-color: #ffda00;
   color: black;
   display: flex;
+  justify-content: space-between;
   align-items: center;
   padding: 0.5rem;
   font-weight: bold;
@@ -183,4 +184,20 @@ footer {
 
 .success-message {
   color: green;
+}
+
+/* Order List */
+.orders {
+  width: 100%;
+  padding: 10px;
+}
+
+tbody > tr:nth-child(odd) {
+  background-color: #f0f0f0;
+}
+td {
+  padding: 5px;
+}
+th {
+  text-align: left;
 }
