--- a/src/index.css
+++ b/src/index.css
@@ -192,6 +192,16 @@ footer {
   color: green;
 }
 
+/* ADMIN AREA */
+
+/* Login Form */
+
+.loginForm {
+  padding: 0;
+  margin: 0;
+  display: flex;
+}
+
 /* Order List */
 .orders {
   width: 100%;
